tests/output/common/newline_location.txt
tests/newline_location.oomph:1: error: this error is right where a newline is

    # foo
         ^^^^

